feat(1853): create traces action dropdown with suppression modals
